[package]
name = "sitegen"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
clap = { version = "4.1.4", features = ["derive"] }
env_logger = "0.10.0"
glob = "0.3.1"
grass = "0.12.2"
handlebars = "4.3.6"
log = "0.4.17"
markdown = "1.0.0-alpha.6"
serde = { version = "1.0.152", features = ["derive"] }
tiny_http = "0.12.0"
toml = "0.7.1"
